--- a/Posts/1jun2020.md
+++ b/Posts/1jun2020.md
@@ -1,1 +1,5 @@
-test
+### Bypassing Anti-Viruses with Thread Injection Technique + C# Delegate & ETW
+
+as you can in these Pictures, I used very simple C# code for Thread Injection Method also in this code API Function Called via “C# Delegate” Technique.
+
+Research Result for some Avs was very good as you can see ESET, McAfee bypassed also I tested this method for some other Avs like Windows Defender which bypassed too.
